manifiestos/deploy-consumer.yml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: deploy-consumer-app-agustin
  namespace: educacionit

spec:
  selector:
    matchLabels:
      app: consumer-app-agustin
  replicas: 1 
  template:
    metadata:
      labels:
        app: consumer-app-agustin
    spec:
      tolerations:
        - key: "environment"
          value: "dev"
          operator: "Equal"

      containers:
      - name: consumer-app-agustin
        image: agusbenoit/challenge-1-flask-k8s-consumer:1.0
