manifiestos/service-api.yml
apiVersion: v1
kind: Service
metadata:
  name: service-flask-app
  namespace: educacionit
spec:
  type: NodePort
  selector:
    app: flask-app-agustin
  ports:
    - name: flask-port
      port: 8000
